# noise-detector

./: .gitignore  Makefile  README.md  pyproject.toml
config.dist/: config.yaml
src/noise_detector/application/: __init__.py  detector.py
src/noise_detector/cli/: detector.py  volume.py
src/noise_detector/common/: __init__.py  config.py
src/noise_detector/infrastructure/logging/: __init__.py  main.py
